fix(card): fix overlapping language toggle on mobile screens by moving it into the flow layout of the main container

--- a/src/pages/card/CardPage.module.scss
+++ b/src/pages/card/CardPage.module.scss
@@ -13,9 +13,11 @@
 }
 
 .topControls {
-    position: absolute;
-    top: 24px;
-    right: 24px;
+    width: 100%;
+    max-width: 1050px;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: -8px; // Offset the container gap slightly
     z-index: 10;
 
     @media print {
